feat: change to serverless

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -3,25 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack --port 3000",
-    "build": "pnpm codegen && next build",
-    "start": "npx serve out -p 3000",
+    "dev": "next dev --turbopack --port 8000",
+    "build": "next build",
+    "start": "npx serve out -p 8000",
     "preview": "pnpm build && pnpm start",
     "lint": "next lint",
     "type-check": "tsc --noEmit",
     "clean": "rm -rf .next out",
     "init-supabase": "node scripts/init-supabase.js",
-    "create-env": "node scripts/init-supabase.js --create-env",
-    "codegen": "graphql-codegen --config codegen.ts",
-    "codegen:watch": "graphql-codegen --config codegen.ts --watch"
+    "create-env": "node scripts/init-supabase.js --create-env"
   },
   "dependencies": {
-    "@apollo/client": "^3.13.8",
     "@supabase-demo/shared": "workspace:*",
     "@supabase/supabase-js": "^2.50.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "graphql": "^16.11.0",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "react": "^19.0.0",
@@ -30,10 +26,6 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@graphql-codegen/cli": "^5.0.7",
-    "@graphql-codegen/typescript": "^4.1.6",
-    "@graphql-codegen/typescript-operations": "^4.6.1",
-    "@graphql-codegen/typescript-react-apollo": "^4.3.3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
