--- a/apps/ai-serverless/.gitignore
+++ b/apps/ai-serverless/.gitignore
@@ -3,16 +3,8 @@ node_modules/
 /.pnp
 .pnp.js
 
-# Production builds
-/dist
-/build
-
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# Vercel
+.vercel
 
 # TypeScript
 *.tsbuildinfo
@@ -32,7 +24,6 @@ pids
 
 # Coverage directory used by tools like istanbul
 coverage/
-*.lcov
 
 # nyc test coverage
 .nyc_output
@@ -61,11 +52,9 @@ jspm_packages/
 # Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment variables file
-.env.test
-
 # parcel-bundler cache (https://parceljs.org/)
 .cache
+.parcel-cache
 
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
@@ -73,17 +62,6 @@ jspm_packages/
 # Temporary folders
 tmp/
 temp/
-
-# NestJS
-/dist/
-
-# Testing
-/coverage
-/.nyc_output
-
-# Logs
-logs
-*.log
 
 # Editor directories and files
 .vscode/
@@ -99,7 +77,4 @@ logs
 .Spotlight-V100
 .Trashes
 ehthumbs.db
-Thumbs.db
-
-# NestJS specific
-/uploads 
+Thumbs.db 
